src/test/resources/de/monticore/umlcd4a/cocos/ebnf/invalid/C4A34.cd
/* (c) https://github.com/MontiCore/monticore */

package de.monticore.umlcd4a.cocos.ebnf.invalid;

classdiagram C4A34 {
  class A {
    / String a = "a";
    / String b = "b";
    / int c = 1;
  }
}
